# lie

./: .gitignore  Cargo.toml  README.md
examples/: gellmann_matrices.rs
liepy/: Cargo.toml  Dockerfile  pyproject.toml  setup.cfg
liepy/examples/: spin.ipynb
liepy/liepy/: algebra.py  test.py
liepy/src/: lib.rs
liepy/tests/: dcoeff.py  op.py  structure.py
src/: gellmann.rs  lib.rs  lie_algebra.rs  spherical.rs  su2.rs  sylvester.rs
tests/: gellmann.rs  sylvester.rs
