[package]
name = "lie"
version = "0.1.0"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"


[build]
rustdocflags = [ "--html-in-header", "./src/docs-header.html" ]

[dependencies]
num-complex = "0.3.1"
approx = {version = "0.4.0", features = ["num-complex"]}
ndarray = {version = "0.14.0", features = ["approx"]}
ndarray-linalg = { version = "0.13.1", features = ["openblas"] }
itertools = "0.10.0"


