[package]
name = "liepy"
version = "0.1.3"
authors = ["RustyBamboo <d@volya.xyz>"]
edition = "2018"

[lib]
name = "liepy"
crate-type = ["cdylib"]

[dependencies]

num-complex = "0.3.1"
approx = {version = "0.4.0", features = ["num-complex"]}
ndarray = {version = "0.14.0", features = ["approx"]}
ndarray-linalg = { version = "0.13.1", features = ["openblas-system"] }


lie = {path = "../"}

numpy = "0.13"
pyo3 = {version = "0.13", features = ["extension-module", "hashbrown", "num-complex"]}
