[metadata]
name = liepy
author = RustyBamboo
author_email = d@volya.xyz
description = A numerical library for working with Lie Groups and Algebras
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RustyBamboo/lie
license = MIT
keywords = science

[options]
python_requires = >=3.6
